@@ -49,8 +49,7 @@ CPU CORE CLOCK FREQUENCY
 ========================
 We supply assembler modules for clock frequencies of 12 MHz, 12.8 MHz, 15 MHz,
 16 MHz, 16.5 MHz 18 MHz and 20 MHz. Other clock rates are not supported. The
-actual clock rate must be configured in usbdrv.h unless you use the default
-12 MHz.
+actual clock rate must be configured in usbconfig.h.
 
 12 MHz Clock
 This is the traditional clock rate of V-USB because it's the lowest clock
@@ -114,13 +113,28 @@ IDs. See http://www.obdev.at/vusb/ for details.
 DEVELOPMENT SYSTEM
 ==================
 This driver has been developed and optimized for the GNU compiler version 3
-(gcc 3). It does work well with gcc 4, but with bigger code size. We recommend
-that you use the GNU compiler suite because it is freely available. V-USB
-has also been ported to the IAR compiler and assembler. It has been tested
-with IAR 4.10B/W32 and 4.12A/W32 on an ATmega8 with the "small" and "tiny"
-memory model. Not every release is tested with IAR CC and the driver may
-therefore fail to compile with IAR. Please note that gcc is more efficient for
-usbdrv.c because this module has been deliberately optimized for gcc.
+and 4. We recommend that you use the GNU compiler suite because it is freely
+available. V-USB has also been ported to the IAR compiler and assembler. It
+has been tested with IAR 4.10B/W32 and 4.12A/W32 on an ATmega8 with the
+"small" and "tiny" memory model. Not every release is tested with IAR CC and
+the driver may therefore fail to compile with IAR. Please note that gcc is
+more efficient for usbdrv.c because this module has been deliberately
+optimized for gcc.
+
+Gcc version 3 produces smaller code than version 4 due to new optimizing
+capabilities which don't always improve things on 8 bit CPUs. The code size
+generated by gcc 4 can be reduced with the compiler options
+-fno-move-loop-invariants, -fno-tree-scev-cprop and
+-fno-inline-small-functions in addition to -Os. On devices with more than
+8k of flash memory, we also recommend the linker option --relax (written as
+-Wl,--relax for gcc) to convert absolute calls into relative where possible.
+
+For more information about optimizing options see:
+
+    http://www.tty1.net/blog/2008-04-29-avr-gcc-optimisations_en.html
+
+These optimizations are good for gcc 4.x. Version 3.x of gcc does not support
+most of these options and produces good code anyway.
 
 
 USING V-USB FOR FREE
